--- a/content/guides/install_clojure.adoc
+++ b/content/guides/install_clojure.adoc
@@ -71,14 +71,16 @@ Please provide feedback on https://ask.clojure.org[Ask Clojure] or Clojurians sl
 [[brew]]
 === brew (Mac or Linux)
 
-`brew` is a package manager for Mac OS X. To install `brew`:
+`brew` is a package manager for Mac OS X or Linux. To install `brew`:
 
-* Go to https://brew.sh/ and follow the installation instructions
+* Go to https://brew.sh/ and follow the installation instructions for your OS
 
 [[java]]
 === Java
 
-Clojure requires Java. Clojure officially supports Java LTS releases (currently Java 8, 11, and 17), but also tries to ensure interim versions work as well. If you don't already hava Java installed, we recommend installing Adoptium Temurin 17.
+Clojure requires Java. Clojure officially supports Java LTS releases (currently Java 8, 11, and 17), but also tries to ensure interim versions work as well. You can use any Java distribution, whether it’s a commercial release from Oracle or an open source version based on OpenJDK (like Temurin). The Clojure tools require only that the `java` command is on the `PATH` or that the `JAVA_HOME` environment variable is set.
+
+If you don't already hava Java installed, we recommend installing Adoptium Temurin 17.
 
 To use the Adoptium Temurin installers:
 
@@ -86,11 +88,12 @@ To use the Adoptium Temurin installers:
 * Download and run the installer appropriate to your platform
 * Ensure `java` is on the system PATH (see this option on the Custom Setup page)
 
-On Mac, you can install using brew:
+On Mac, you can also install Temurin using brew:
 
-* `brew install --cask temurin` - install latest Temurin (formerly AdoptOpenJDK)
+* `brew tap homebrew/cask-versions` - add the cask-versions tap to Homebrew
+* `brew install --cask temurin17` - install Temurin 17 (formerly AdoptOpenJDK)
 
-You then need to add `java` to your PATH:
+Check your Java version by running `java --version`. If that's not Temurin 17, then you may then need to add `java` to your `PATH`:
 
 [source,shell]
 ----
