--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -17,7 +17,7 @@ Clojure is a https://clojure.org/about/dynamic[dynamic development environment] 
 
 Install these first:
 
-* <<install_clojure#,Clojure CLI>> provides the language, a REPL (Read Eval Print Loop), library support, and program runner
+* <<install_clojure#,Clojure>> provides the language, a REPL (Read Eval Print Loop), library support, and program runner
 * <<editors#,Editor>> with interactive development support
 
 == How do I work with these tools?
