Add graph for language used prior to Clojure

--- a/content/news/2022/06/02/state-of-clojure-2022.adoc
+++ b/content/news/2022/06/02/state-of-clojure-2022.adoc
@@ -70,6 +70,8 @@ image::/images/content/news/2022-06-02/build-tools.svg[CLJS build tools over the
 
 The programming language which users have come from has been relatively stable. Javascript and Python continue to leapfrog each other for the second spot. (see full results here)
 
+image::/images/content/news/2022-06-02/prior-to-clojure.svg[Language used prior to Clojure over the last 5 years]
+
 == The Clojure Ecosystem
 
 Clojure would not be what it is without the contributions of its community. Here’s a small selection of the shoutouts the community gave to the community.
