Add link to full results

--- a/content/news/2022/06/02/state-of-clojure-2022.adoc
+++ b/content/news/2022/06/02/state-of-clojure-2022.adoc
@@ -68,7 +68,7 @@ https://github.com/thheller/shadow-cljs[shadow-cljs] continues to rise among CLJ
 
 image::/images/content/news/2022-06-02/build-tools.svg[CLJS build tools over the last 5 years]
 
-The programming language which users have come from has been relatively stable. Javascript and Python continue to leapfrog each other for the second spot. (see full results here)
+The programming language which users have come from has been relatively stable. Javascript and Python continue to leapfrog each other for the second spot. (see https://www.surveymonkey.com/results/SM-QRiy0fSu3bmDK_2FSNMplVJw_3D_3D/[full results])
 
 image::/images/content/news/2022-06-02/prior-to-clojure.svg[Language used prior to Clojure over the last 5 years]
 
