--- a/content/news/2022/06/02/deref.adoc
+++ b/content/news/2022/06/02/deref.adoc
@@ -7,6 +7,10 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure ecosystem. (https://twitter.com/ClojureDeref[@ClojureDeref] https://clojure.org/feed.xml[RSS])
 
+== Highlights
+
+Today we posted the https://clojure.org/news/2022/06/02/state-of-clojure-2022[State of Clojure 2022 Results] - check out the state of our community! It's great to see Clojure continuing to be used more for work and more at bigger companies, and for the Clojure community to continue thriving!
+
 == Podcasts and videos
 
 * https://soundcloud.com/defn-771544745/85-clojure-dart-duo-christophe-and-baptiste[#85 Clojure Dart Duo: Christophe and Baptiste] - defn podcast
