--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -72,7 +72,7 @@ Videos and presentations:
 
 * https://www.youtube.com/user/ClojureTV/videos[ClojureTV] - talks by Rich Hickey and presentations from Clojure/conj and Clojure/west
 * http://www.infoq.com/Clojure/presentations/[InfoQ Clojure Presentations] - from a variety of conferences
-* https://github.com/matthiasn/talk-transcripts[Talk transcripts] - Rich Hickey, David Nolen, Stuart Sierra, and others
+* https://github.com/matthiasn/talk-transcripts[Talk transcripts] - Rich Hickey, David Nolen, Alessandra Sierra, and others
 * http://www.parens-of-the-dead.com/[Parens of the Dead] - a screencast series writing a game from scratch with Clojure and ClojureScript
 * https://www.youtube.com/c/+practicalli[Practicalli Clojure Study Guide] - weekly live broadcasts on developing with Clojure and ClojureScript
 
