--- a/content/dev/contributor_agreement.adoc
+++ b/content/dev/contributor_agreement.adoc
@@ -179,7 +179,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Steve Miner
 * Steven Yi
 * Stuart Halloway
-* Stuart Sierra
+* Alessandra Sierra
 * Tassilo Horn
 * Tim Dysinger
 * Tim McCormack
