--- a/content/news/2022/06/02/state-of-clojure-2022.adoc
+++ b/content/news/2022/06/02/state-of-clojure-2022.adoc
@@ -81,7 +81,7 @@ Clojure would not be what it is without the contributions of its community. Here
 * “link:https://github.com/Olical/[olical] (conjure), https://jeaye.com[jeaye] (orchestra), https://github.com/metosin[metosin] (malli), https://github.com/day8[day8] (re-frame), https://github.com/technomancy[technomancy] (lein)“
 * “ I really appreciate https://github.com/jacekschae[Jacek Schae]'s courses for learning Reitit, Reagent, and Re-frame. If these had been available when I was first learning Clojure, I'm sure I would have stuck with it longer.”
 * “... http://sam.aaron.name[Sam Aaron] - work on Overtone + tutorials”
-* “All the people out there who write/vlog about their experience with Clojure. https://www.lvh.io[LVH], https://github.com/thobbs[Tyler Hobbs], https://github.com/lambdasierra[Stuart Sierra], Rich Hickey.”
+* “All the people out there who write/vlog about their experience with Clojure. https://www.lvh.io[LVH], https://github.com/thobbs[Tyler Hobbs], https://github.com/lambdasierra[Alessandra Sierra], Rich Hickey.”
 * “... https://danielcompton.net[Daniel Compton], the NuBank team (go Cavalcanti), and the guys on Zulip doing all the machine learning stuff, https://dragan.rocks[Dragan Djuric]”
 * “... All contributors to editor tooling (personally using https://calva.io[Calva]).”
 * “I really like the work of https://github.com/weavejester[James Reeve] and the way he maintains his libraries.”
