--- a/content/news/2018/12/17/clojure110.adoc
+++ b/content/news/2018/12/17/clojure110.adoc
@@ -34,4 +34,4 @@ Thanks to all of the community members who contributed patches to Clojure 1.10 (
 * *Sean Corfield*
 * *Sebastien Martel*
 * Shogo Ohta
-* Stuart Sierra
+* Alessandra Sierra
