--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -487,6 +487,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * WeFarm
 * WeShop
 * Whibse
+* Whimsical
 * Whitepages
 * Wikidocs (acquired by Atlassian)
 * Wildbit
