--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -190,6 +190,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * GoOpti
 * Gracenote
 * Grammarly
+* greenlabs
 * GreenPowerMonitor
 * Groupon
 * Guaranteed Rate
